chore: fixed extra whitespace issue for all pages

--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -8,7 +8,7 @@
   top: 0;
   left: 0;
   height: 100%;
-  width: 75%;
+  width: 100%;
   z-index: 3;
   transform: translateX(-100%);
   background-color: rgba(0, 0, 0, 0.5);
@@ -20,8 +20,6 @@
 }
 .menu-item {
   width: 100px;
-  display: flex;
-  flex-direction: column;
   padding: 0 10px;
   text-align: center;
 }
@@ -71,3 +69,25 @@
   cursor: pointer;
   z-index: 2;
 }
+
+.times {
+  margin-left: auto;
+}
+/* .times.animated {
+  animation: move-in 1s forwards;
+}
+
+@keyframes move-in {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1.5);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+} */
