--- a/src/style.css
+++ b/src/style.css
@@ -1001,7 +1001,7 @@ form input[type="submit"]:hover, form input[type="submit"]:active, form input[ty
   .hidden-print { display: none !important; } }
 /* Header Styles */
 /* line 5, sass/layout/_header.scss */
-.site-header { width: 100%; background: rgb(80, 80, 250); padding: 30px 0; padding-left: 20px; margin-bottom: 30px; -webkit-transition: 1s ease; transition: 1s ease; position: fixed; z-index: 2; box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px; }
+.site-header { width: 100%; background: rgb(80, 80, 250); padding: 30px 0; padding-left: 20px; margin-bottom: 30px; -webkit-transition: 1s ease; transition: 1s ease; position: fixed; z-index: 10; box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px; }
 /*.site-header:hover { background: rgba(0, 0, 60, 1); }*/
 
 
